fixes the text align in about for cleaner look

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -44,6 +44,7 @@
          line-height: 2;
          animation: fadeInLeft 1s linear;
          margin-left: 2%;
+         text-align: justify;
       }
    }
 
